Sun Feb 16 08:11:23 2014  Zachary Scott  <e@zzak.io>

	* README.EXT.ja: [DOC] Fix typo by @utenmiki [Fixes GH-534]
	  https://github.com/ruby/ruby/pull/534

Sun Feb 16 07:48:20 2014  Tanaka Akira  <akr@fsij.org>

	* ext/bigdecimal/bigdecimal.c (BIGNUM_ZERO_P): Unused macro removed.

Sun Feb 16 06:12:23 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Rename macro names: RBIGNUM_FOO to BIGNUM_FOO.
	  (BIGNUM_EMBED_LEN_NUMBITS): Renamed from RBIGNUM_EMBED_LEN_NUMBITS.
	  (BIGNUM_EMBED_LEN_MAX): Renamed from RBIGNUM_EMBED_LEN_MAX.
	  (BIGNUM_SIGN_BIT): Renamed from RBIGNUM_SIGN_BIT.
	  (BIGNUM_SIGN): Renamed from RBIGNUM_SIGN.
	  (BIGNUM_SET_SIGN): Renamed from RBIGNUM_SET_SIGN.
	  (BIGNUM_POSITIVE_P): Renamed from RBIGNUM_POSITIVE_P.
	  (BIGNUM_NEGATIVE_P): Renamed from RBIGNUM_NEGATIVE_P.
	  (BIGNUM_EMBED_FLAG): Renamed from RBIGNUM_EMBED_FLAG.
	  (BIGNUM_EMBED_LEN_MASK): Renamed from RBIGNUM_EMBED_LEN_MASK.
	  (BIGNUM_EMBED_LEN_SHIFT): Renamed from RBIGNUM_EMBED_LEN_SHIFT.
	  (BIGNUM_LEN): Renamed from RBIGNUM_LEN.
	  (RBIGNUM_DIGITS): Renamed from RBIGNUM_DIGITS.
	  (BIGNUM_LENINT): Renamed from RBIGNUM_LENINT.

	* bignum.c: Follow the above change.

	* gc.c: Ditto.

	* marshal.c: Ditto.

	* math.c: Ditto.

	* numeric.c: Ditto.

	* random.c: Ditto.

	* rational.c: Ditto.

	* sprintf.c: Ditto.

	* ext/-test-/bignum/bigzero.c: Ditto.

	* ext/-test-/bignum/intpack.c: Ditto.

	* ext/bigdecimal/bigdecimal.c: Ditto.

Sat Feb 15 20:48:49 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in (FILE_READEND): Don't detect it because it is not used.

Sat Feb 15 13:22:28 2014  Eric Wong  <e@80x24.org>

	* probes_helper.h (RUBY_DTRACE_HOOK): correct type for _id

Sat Feb 15 11:47:47 2014  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_cmp): Avoid bignum allocation for comparison
	  between bignum and fixnum.

Sat Feb 15 10:55:12 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* ext/-test-/win32/fd_setsize/depend: fix wrong dependencies.
	  [ruby-dev:47253]
